# doc_manager

./: .pre-commit-config.yaml  CHANGELOG.rst  LICENSE  README.rst  pyproject.toml  requirements.txt  setup.py  test.py  tox.ini
.github/workflows/: cd.yml  ci.yml  pre-commit.yml  tests.yml
doc_manager/: admin.py  apps.py  models.py  views.py
doc_manager/locale/en/LC_MESSAGES/: django.mo  django.po
doc_manager/locale/pl/LC_MESSAGES/: django.mo  django.po
doc_manager/templates/: admin_change_form_documents.html
docs/: conf.py  example.rst  index.rst  install.rst  usage.rst
example/: settings.py  urls.py  wsgi.py
example/example_doc/: manage.py
example/example_doc/example_doc/: asgi.py  settings.py  urls.py  wsgi.py
example/example_doc/our_app/: views.py
example/our_app/: admin.py  apps.py  models.py  views.py
tests/: admin.py  models.py  test_admin.py  test_models.py  test_settings.py
